# cyber_insurance

./: .gitignore  README.md  fit_zero_truncated.R  pyproject.toml  setup.py
catboost_info/: learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
src/cyber_insurance/: main.py
src/cyber_insurance/analysis/: data_exploration.py  data_preprocessing.py  frequency_modeling.py  hyperparameter_tuning_analysis.py  ico_data_analysis.py  initial_data_analysis.py  missing_data_analysis.py  model_diagnostics.py
src/cyber_insurance/data/: constants.py  imputation.py  ingestion.py  preprocessing.py
src/cyber_insurance/models/: classical.py  hyperparameter_tuning.py  model_evaluator.py  model_trainer.py
src/cyber_insurance/utils/: constants.py  large_data_reader.py  logger.py
