[project]
name = "cyber-insurance-ml"
version = "0.1.0"
description = "ML pipeline for cyber insurance frequency modeling"
requires-python = ">=3.9"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
openpyxl = "^3.1.2"
statsmodels = "^0.14.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^2.17.5"
pytest = "^7.4.0"
