[project]
name = "cyber-insurance-ml"
version = "0.1.0"
description = "ML pipeline for cyber insurance frequency modeling"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "xgboost>=2.1.4",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "openpyxl>=3.1.2",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyber_insurance"]

[tool.ruff]
line-length = 79  # PEP 8 standard
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E203",  # Whitespace before ':'
    "E501"   # Line too long (handled by black)
]
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist"
]

[tool.ruff.lint.isort]
known-first-party = ["cyber_insurance"]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.6",
    "black>=23.7.0",
    "isort>=5.12.0",
    "pylint>=2.17.5",
    "pytest>=7.4.0"
]
